# TinyReflection

./: CMakeLists.txt  README.md  build.py  build_generate_macro.py  reflection.cpp
doc/: 现代反射实现（一）：反射语法基础.md  现代反射实现（三）：Json序列化.md  现代反射实现（二）：获取结构体元数据.md  现代反射实现（四）：Json反序列化.md  第一章：反射语法基础.md  第二章：获取结构体元数据.md
test/: test_check_type.cpp  test_get_member_count.cpp  test_get_member_offset_map.cpp  test_get_member_reference_map.cpp  test_get_member_string_and_type_string.cpp  test_get_member_value.cpp  test_pref_reflection.cpp  test_reflection_from_json.cpp  test_reflection_to_json.cpp
tinyrefl/: rapidjson_SAX.hpp  reflection.hpp  reflection_from_json.hpp  reflection_get_tuple.hpp  reflection_to_json.hpp  reflection_tuple_foreach.hpp  reflection_utils.hpp
tinyrefl/utils/: reflection.hpp  reflection_get_member_tuple_helper.hpp  reflection_get_tuple.hpp  reflection_tuple_foreach.hpp  reflection_utils.hpp
